Fix onion routing key process misunderstood

--- a/paper/inc/evaluation.tex
+++ b/paper/inc/evaluation.tex
@@ -102,6 +102,12 @@ In figure~\ref{fig:ktime-data} after fixing \textit{s=1; d=5; t=0} and \textit{n
   \caption{Average delivery time considering varying number of paths.}
   \label{fig:ktime-data}
 \end{figure}
+%
+%\begin{figure}[hbt]
+%  \centering
+%  \includegraphics[scale=0.70]{imgs/presentation/evil-path.eps}
+%  \caption{test}
+%\end{figure}
 
 %%% Local Variables:
 %%% mode: latex
