--- a/paper/inc/introduction.tex
+++ b/paper/inc/introduction.tex
@@ -6,6 +6,6 @@ There are several scenarios where DTNs can be useful like sensing systems, deep 
 
 A popular technique to achieve anonymous communication in traditional networks is onion routing \cite{onion-routing}. Onion routing provides source anonymity by encapsulating messages in layers of encryption. It is said that onion routing is not aplicable to DTNs because onion routing method needs to know the route in advance to perform the cryptographic layers for each node \cite{dtn-security-analysis}. Nevertheless, this protocol can be applicable in deterministic (predictable) DTNs. Deterministic DTNs have been studied before \cite{probabilistic-dtn}, \cite{deterministic-dtn}. Using predictable DTNs, the route to encrypt the message needed in onion routing can be obtained. At the same time, we solve the challenging routing problem in DTNs \cite{oracle-types} because we decide to which nodes forward the message.
 
-Previous research work on the use of onion routing in DTNs is very scarce. Possibly, the most relevant is ARNDEN \cite{arden}. ARDEN uses groups of nodes to perform the layering process and broadcast messages between these groups. The message's route is chosen randomly. To perform the cryptographic layers attribute based encryption (ABE) is used. Our method is easier to implement than ARDEN, and does not need complex protocol cryptography methods like ABE.
+Previous research work on the use of onion routing in DTNs is very scarce. Possibly, the most relevant is ARDEN \cite{arden}. ARDEN uses groups of nodes to perform the layering process and broadcast messages between these groups. The message's route is chosen randomly. To perform the cryptographic layers attribute based encryption (ABE) is used. Our method is easier to implement than ARDEN, and does not need complex protocol cryptography methods like ABE.
 
 The remainder of the paper is organized as follows: Section \ref{sec:relevant-concepts} presents a deeper review of relevant concepts used in our proposal. Section \ref{sec:proposal} shows the process to use onion routing over predictable DTNs. A method to know the route in advance, given a set of restrictions, for the layering process is proposed. Section \ref{sec:sanalysis} presents an informal analysis of the security of our proposal from the point of view of passive and active attackers. Section \ref{sec:evaluation} presents the results of our simulation over a public transport network (considered predictable networks). This results show the performance of our method in terms of different statistical metrics. Section \ref{sec:conclusions} provides concluding remarks as well as possible future research work.
