--- a/paper/inc/securityanalysis.tex
+++ b/paper/inc/securityanalysis.tex
@@ -14,7 +14,7 @@ Passive attacks are those that perform guessing simply observing user traffic pa
 
 As is explained in \cite{latency-leak} if the attacker is the destination of the message, he can learn something from the delay between messages.  This kind of attacks does not work when the sending start time, known as \textit{t} in our path selection method, is not highly predictable \cite{enpassant}.
 
-Another attacker model is a set of compromised nodes that work together to retrieve information leading to break the users privacy. One possible situation is the multiple decryption. An attacker will be able to decrypt more layers, or messages if one of the nodes is the destination, because they have their corresponding private keys. To overcome such attacks the \textit{n} value can be increased, i.e: the number of nodes that will have to pass through the message. A message will have as much layers as nodes are in the path. There is a trade-off between efficiency and security when deciding the value of \textit{n} that needs to be studied in future researches. 
+Another attacker model is a set of compromised nodes that work together to retrieve information leading to break the users privacy. One possible situation is the multiple decryption. An attacker will be able to decrypt more layers, or messages if one of the nodes is the destination, because they have their corresponding keys. To overcome such attacks the \textit{n} value can be increased, i.e: the number of nodes that will have to pass through the message. A message will have as much layers as nodes are in the path. There is a trade-off between efficiency and security when deciding the value of \textit{n} that needs to be studied in future researches. 
 
 Another possible scenario where a set of compromised nodes work together is the sending node periodicity analysis. There are scenarios where a node or a set of them rarely transmit information to others, discarding this nodes from the probable sending set, a globally passive adversary can correctly guess the source of a message. To solve the guessing issue the creation of dummy packets when ingress throughput drops below a certain threshold \cite{arden} may help to prevent such attacks.
 
